--- a/Contact_Form/Base.lproj/Main.storyboard
+++ b/Contact_Form/Base.lproj/Main.storyboard
@@ -100,6 +100,7 @@
                                     <constraint firstAttribute="width" constant="352" id="CCl-aK-Roz"/>
                                     <constraint firstAttribute="height" constant="50" id="Lgt-Df-nOh"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
